--- a/CyNickal Software EFT/CyNickal Software EFT.vcxproj
+++ b/CyNickal Software EFT/CyNickal Software EFT.vcxproj
@@ -118,7 +118,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG;_CONSOLE;NOMINMAX;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpplatest</LanguageStandard>
       <PrecompiledHeader>Use</PrecompiledHeader>
@@ -178,6 +178,7 @@
     <ClInclude Include="DMA\Process.h" />
     <ClInclude Include="Game\Classes\CGameObjectManager.h" />
     <ClInclude Include="Game\Classes\CLinkedListEntry.h" />
+    <ClInclude Include="Game\Classes\CObject.h" />
     <ClInclude Include="Game\EFT.h" />
     <ClInclude Include="GUI\Main Window\Main Window.h" />
     <ClInclude Include="pch.h" />
