--- a/CyNickal Software EFT/CyNickal Software EFT.vcxproj.filters
+++ b/CyNickal Software EFT/CyNickal Software EFT.vcxproj.filters
@@ -107,6 +107,9 @@
     <ClInclude Include="Game\Classes\CGameObjectManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Game\Classes\CObject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="EFT_DMA.rc">
