--- a/CyNickal Software EFT/CyNickal Software EFT.vcxproj
+++ b/CyNickal Software EFT/CyNickal Software EFT.vcxproj
@@ -186,6 +186,7 @@
     <ClInclude Include="Game\Classes\CPlayer.h" />
     <ClInclude Include="Game\Classes\Vector.h" />
     <ClInclude Include="Game\EFT.h" />
+    <ClInclude Include="Game\Offsets\Offsets.h" />
     <ClInclude Include="Game\Player List\Player List.h" />
     <ClInclude Include="GUI\Main Window\Main Window.h" />
     <ClInclude Include="pch.h" />
