--- a/CyNickal Software EFT/CyNickal Software EFT.vcxproj.filters
+++ b/CyNickal Software EFT/CyNickal Software EFT.vcxproj.filters
@@ -131,6 +131,9 @@
     <ClInclude Include="Game\Player List\Player List.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Game\Offsets\Offsets.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="EFT_DMA.rc">
