--- a/CyNickal Software EFT/CyNickal Software EFT.vcxproj
+++ b/CyNickal Software EFT/CyNickal Software EFT.vcxproj
@@ -238,7 +238,9 @@
     <ClCompile Include="Game\Classes\CBaseLootItem\CBaseLootItem.cpp" />
     <ClCompile Include="Game\Classes\CExfilPoint\CExfilPoint.cpp" />
     <ClCompile Include="Game\Classes\CItemTemplate\CItemTemplate.cpp" />
+    <ClCompile Include="Game\Classes\CLocalGameWorld\CLocalGameWorld.cpp" />
     <ClCompile Include="Game\Classes\CLootableContainer\CLootableContainer.cpp" />
+    <ClCompile Include="Game\Classes\CLootList\CLootList.cpp" />
     <ClCompile Include="Game\Classes\CObservedLootItem\CObservedLootItem.cpp" />
     <ClCompile Include="Game\Classes\CMagazine\CMagazine.cpp" />
     <ClCompile Include="DMA\DMA Thread.cpp" />
@@ -251,15 +253,14 @@
     <ClCompile Include="Game\Classes\CItem\CItem.cpp" />
     <ClCompile Include="Game\Classes\CLinkedListEntry.cpp" />
     <ClCompile Include="Game\Classes\CPlayerSkeleton\CPlayerSkeleton.cpp" />
+    <ClCompile Include="Game\Classes\CRegisteredPlayers\CRegisteredPlayers.cpp" />
+    <ClCompile Include="Game\Classes\CExfilController\CExfilController.cpp" />
     <ClCompile Include="Game\Classes\CUnityTransform\CUnityTransform.cpp" />
     <ClCompile Include="Game\Classes\Players\CBaseEFTPlayer\CBaseEFTPlayer.cpp" />
     <ClCompile Include="Game\Classes\Players\CClientPlayer\CClientPlayer.cpp" />
     <ClCompile Include="Game\Classes\Players\CObservedPlayer\CObservedPlayer.cpp" />
     <ClCompile Include="Game\EFT.cpp" />
-    <ClCompile Include="Game\Exfil List\Exfil List.cpp" />
     <ClCompile Include="Game\GOM\GOM.cpp" />
-    <ClCompile Include="Game\Loot List\Loot List.cpp" />
-    <ClCompile Include="Game\Player List\Player List.cpp" />
     <ClCompile Include="GUI\Aimbot\Aimbot.cpp" />
     <ClCompile Include="GUI\Color Picker\Color Picker.cpp" />
     <ClCompile Include="GUI\Config\Config.cpp" />
@@ -297,7 +298,10 @@
     <ClInclude Include="Game\Classes\CBaseLootItem\CBaseLootItem.h" />
     <ClInclude Include="Game\Classes\CExfilPoint\CExfilPoint.h" />
     <ClInclude Include="Game\Classes\CItemTemplate\CItemTemplate.h" />
+    <ClInclude Include="Game\Classes\CLocalGameWorld\CLocalGameWorld.h" />
     <ClInclude Include="Game\Classes\CLootableContainer\CLootableContainer.h" />
+    <ClInclude Include="Game\Classes\CLootList\CGenericLootList.h" />
+    <ClInclude Include="Game\Classes\CLootList\CLootList.h" />
     <ClInclude Include="Game\Classes\CObservedLootItem\CObservedLootItem.h" />
     <ClInclude Include="Game\Classes\CMagazine\CMagazine.h" />
     <ClInclude Include="DMA\DMA Thread.h" />
@@ -313,6 +317,8 @@
     <ClInclude Include="Game\Classes\CObject.h" />
     <ClInclude Include="Game\Classes\CObjectInfo.h" />
     <ClInclude Include="Game\Classes\CPlayerSkeleton\CPlayerSkeleton.h" />
+    <ClInclude Include="Game\Classes\CRegisteredPlayers\CRegisteredPlayers.h" />
+    <ClInclude Include="Game\Classes\CExfilController\CExfilController.h" />
     <ClInclude Include="Game\Classes\CUnityTransform\CUnityTransform.h" />
     <ClInclude Include="Game\Classes\Players\CBaseEFTPlayer\BossNameMap.h" />
     <ClInclude Include="Game\Classes\Players\CBaseEFTPlayer\CBaseEFTPlayer.h" />
@@ -325,11 +331,8 @@
     <ClInclude Include="Game\Enums\EPlayerSide.h" />
     <ClInclude Include="Game\Enums\EPlayerType.h" />
     <ClInclude Include="Game\Enums\ESpawnType.h" />
-    <ClInclude Include="Game\Exfil List\Exfil List.h" />
     <ClInclude Include="Game\GOM\GOM.h" />
-    <ClInclude Include="Game\Loot List\Loot List.h" />
     <ClInclude Include="Game\Offsets\Offsets.h" />
-    <ClInclude Include="Game\Player List\Player List.h" />
     <ClInclude Include="GUI\Aimbot\Aimbot.h" />
     <ClInclude Include="GUI\Color Picker\Color Picker.h" />
     <ClInclude Include="GUI\Config\Config.h" />
